fixed contact leader modal footer on mobile view

--- a/src/components/HomeChurchContactModal/homeChurchContactModal.scss
+++ b/src/components/HomeChurchContactModal/homeChurchContactModal.scss
@@ -86,5 +86,7 @@
 }
 
 @media (max-width: 767px) {
-
+      .modal-footer{
+            height:11vh;
+      }
 }
